# argus

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: pytest-ci.yml
argus/: logger_setup.py
argus/tasks/: __init__.py  epay.py  github.py  product.py  snow.py  todo.py
argus/tasks/base/: data.py  database.py  format_utils.py  notifier.py  scheduler.py  serializable.py  task.py
argus/tasks/base/tests/: test_scheduler.py
argus/tasks/ml/: hugging_face.py  paper_with_code.py
argus/tasks/tests/: test_formatters.py  test_serialization.py  test_tasks.py
dashboard/: Home.py  app.py
dashboard/pages/: 1_ML.py
dashboard/templates/: ml.html
scripts/: code_quality_check.sh  main.py
