[tool.poetry]
name = "argus"
version = "0.1.0"
description = ""
authors = ["sve"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.17.6"
requests = "^2.32.3"
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.8.0"
types-peewee = "^3.17.6.20240813"
types-requests = "^2.32.0.20240914"
pylint = "^3.2.7"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.39.0"
pytest = "^8.3.3"
tabulate = "^0.9.0"
lxml = "^5.3.0"
python-telegram-bot = "^21.6"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    # "ANN",
]
