[project]
name = "argus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "lxml>=6.0.0",
    "peewee>=3.18.2",
    "pytest>=8.4.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "tabulate>=0.9.0",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.setuptools]
py-modules = ["argus"]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
